Paginas management y all

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Transaction Management</title>
-  <link rel="stylesheet" href="css/transactionPage.css"> <!-- Ruta actualizada para el archivo CSS -->
+  <link rel="stylesheet" href="css/transactionPage.css">
 </head>
+
 <body>
 <div class="container">
   <h1>Transaction Management</h1>
@@ -29,6 +30,7 @@
   </form>
 
   <h2>All Transactions</h2>
+  <button id="toggle-transactions-btn">Hide Traceability</button>
   <ul id="transaction-list"></ul>
 </div>
 <script src="js/transaction.js"></script>
