front con AWS como server

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Transaction Manager</title>
+    <link rel="icon" href="Logo.jpg" type="image/x-icon">
     <style>
       h1 {
         font-size: 70px;
