--- a/src/main/resources/META-INF/resources/allTransactions.html
+++ b/src/main/resources/META-INF/resources/allTransactions.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="Logo.jpg" type="image/x-icon">
     <title>All Transactions</title>
     <link rel="stylesheet" href="css/transactionPage.css" />
   </head>
@@ -17,8 +18,10 @@
       </button>
     </div>
     <div class="container">
-      <h1>All Transactions</h1>
-      <ul id="transaction-list"></ul>
+      <div id="all-transactions-container" class="transaction-container">
+        <h2>All Transactions</h2>
+        <ul id="transaction-list"></ul>
+      </div>
     </div>
     <script src="js/allTransactions.js"></script>
   </body>
